--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
 			<h1><a href="{{ site.url }}">Jacob Charles Wilson</a></h1>
 			<ul>
 				<li><a rel="author" title="{{ site.author.email | xml_escape }}" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-				<li><a rel="external" title="{{ site.author.instagram | xml_escape }}" href="https://www.instagram.com/{{ site.author.instagram }}">{{ site.author.instagram | prepend: '@' }}</a></li>
+				<li><a rel="external" title="{{ site.author.github | xml_escape }} on GitHub" href="https://github.com/{{ site.author.github }}">Github</a></li>
+				<li><a rel="external" title="{{ site.author.linkedin | xml_escape }} on LinkedIn" href="https://www.linkedin.com/in/{{ site.author.linkedin }}">LinkedIn</a></li>
+				<li><a rel="external" title="{{ site.author.instagram | xml_escape }} on Instagram" href="https://www.instagram.com/{{ site.author.instagram }}">Instagram</a></li>
 			</ul>
 		</header>
 		<main>
